styles: fix padding on small devices

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -804,6 +804,7 @@ nav a[aria-current='page'] {
 
   body {
     background: var(--bg);
+    padding: 0;
   }
 
   #header {
